<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:hint="@string/input_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_dob">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/profileUpdateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/profileLogoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="15sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/red"/>
    </RelativeLayout>
</LinearLayout>